testing/tests/ui/cycle2.stderr
error: cyclic dependency in graph [
           "\"cycle1.html\" (absolute path: \"$WORKSPACE/target/tests/trybuild/askama_testing/templates/cycle1.html/") --> \"cycle1.html\" (absolute path: \"$WORKSPACE/target/tests/trybuild/askama_testing/templates/cycle1.html/")",
       ]
 --> tests/ui/cycle2.rs:4:19
  |
4 | #[template(path = "cycle1.html")]
  |                   ^^^^^^^^^^^^^
